--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
-/* Your CSS Code here. */
+ .test{
+    width:1000px;
+    height:490px;
+    margin:0 auto;
+    margin-top:100px;
+    border:0.5px solid lightgrey;
+    background-color: white;
+}
+.x{
+    width:500px;
+}
+.y{
+    margin-top:10px;
+}
